--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  smooth_star_rating: 1.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
